--- a/css/styles.css
+++ b/css/styles.css
@@ -1,118 +1,141 @@
 /*FUENTES*/
-@font-face{
-    font-family:"TrebuchetMS" ;
-    src:url(fonts/TrebuchetMS.ttf) ;
-    font-weight: normal ;
-    font-style: normal;
+@font-face{/*Se utiliza para llamara os recursos que se usaran en el proyecto*/
+    font-family:"TrebuchetMS" ; /*La familia de la letra que vamos a usar*/
+    src:url(fonts/TrebuchetMS.ttf) ;/*Es la direccion de la funte dela letra */
+    font-weight: normal ;/*Espesifica el peso de la letra normal es 700*/
+    font-style: normal; /*Espesifica el estilo de trabajo*/
 }
 
 
-@font-face{
-    font-family:"BebasNeue";
-    src:url(fonts/BebasNeue.otf) ;
-    font-weight: normal ;
-    font-style: normal;
+@font-face{ /*Se utiliza para llamara recursos que se utilizaran en el proyecto*/
+    font-family:"BebasNeue";/*nombre de la letra que se usara*/
+    src:url(fonts/BebasNeue.otf) ;/*url del sitio web donde se encuentra la otf*/
+    font-weight: normal ;/*Espesifica el peso de la letra*/
+    font-style: normal;/*espesifica el estilo de trabajo*/
 }
 
-@font-face {
-    font-family:"WebSymbolsRegular";
-    src: url('fonts/websymbols-regular-webfont.eot');
-    src: url('fonts/websymbols-regular-webfont.eot#iefix') format('embedded-opentype'),
-         url('fonts/websymbols-regular-webfont.woff') format('woff'),
-         url('fonts/websymbols-regular-webfont.ttf') format('truetype'),
-         url('fonts/websymbols-regular-webfont.svg#WebSymbolsRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+@font-face {/*Se utiliza para llamar los recursos que se utilizaran */
+    font-family:"WebSymbolsRegular"; /*Nombre del tipo de letra*/
+    src: url('fonts/websymbols-regular-webfont.eot');/*url conla extencion eot*/
+    src: url('fonts/websymbols-regular-webfont.eot#iefix') format('embedded-opentype'),/*url con las extenciones*/
+         url('fonts/websymbols-regular-webfont.woff') format('woff'),/*url con las extenciones woff*/
+         url('fonts/websymbols-regular-webfont.ttf') format('truetype'),/*url con las extenciones truetype*/
+         url('fonts/websymbols-regular-webfont.svg#WebSymbolsRegular') format('svg');/*Url con las extenciones svg*/
+    font-weight: normal;/*peso de a letra que se usara entre 100 y 900 normal es = a 700*/
+    font-style: normal;/*Espesifica el estilo de trabajo*/
 }
 
 /*GENERALES*/
-*{
-    margin: 0px;
-    padding: 0px;
+*{/*El asterisco se utiliza para indicar que se aplicarn  estilos en general de la web*/
+    margin: 0px; /*indica que la margen de los 4 lados sera de 0px*/
+    padding: 0px; /*Indica que el espcio interno sera de 0px en los cuatro lados*/
 }
 
-body{
-    background: url("../img/pattern.png");
+body{/*Se utiliza paea indicar que se aplixarane estilos directa,mee al body de la web*/
+    background: url("../img/pattern.png");/*Se utiliza para poner fondos en el elemento, para este caso se trae desde ptra carpeta el fondo deseado*/
 }
 
-.wrap{
-    width: 1200px;
-    margin: 0px auto;
+.wrap{/*Se utiliza para indicar que se aplixaran estilos en la clase wrap */
+    width: 1200px;/*Se aplica un ancho de la pagina de 1200px*/
+    margin: 0px auto;/*Se aplica un margin de 0px e los cuatro costados de la pagina */
 }
-.gear{
-    font-family:"WebSymbolsRegular";
+.gear{/*Se utiliza para indicar que se aplicaran estilos a la clase gear*/
+    font-family:"WebSymbolsRegular";/*Se aplica una familia se simbolos */
 }
 
 /*CABECERAS*/
 
-#header{
-    width: 100%;
-    height: 70px;
-    background-color: black;
-    font-family: "BebasNeue.otf";
-    color:white
+#header{/*Se utiliza para indicar que se aplicaran estilos a los elementos del id header*/
+    width: 100%;/*Se aplicara un ancho de 100%*/
+    height: 70px;/*Se aplicara un alto del 70%*/
+    background-color: black; /*Se aplicara un color de fondo */
+    font-family: "BebasNeue.otf";/*Se apliacra una familia para el estilo de la letra*/
+    color:white/*la letra tendra un color blanco*/
 }
 
-#logo{
-    float: left;
-    width: 200px;
-    background-color: #37bcf9;
-    text-align: center;
-    margin-top: 8px;
-    margin-left: 20px;
-    letter-spacing: 1px;
-    cursor: pointer;
-    overflow:hidden;
-    transition: all 300ms;
+#logo{/*Se utiliza para indicar que se aplicara estilosa los elemtos del id logo*/
+    float: left;/*El elemento se flotara al lado izquierdo*/
+    width: 200px;/*tendra un ancho de maximo 200px*/
+    background-color: #37bcf9;/*Se aplicara un fondo de color */
+    text-align: center;/*Se indica que que el texto sera centrado*/
+    margin-top: 8px;/*Se aplica un espacio interno de 8px en loscuatro costados del elemento*/
+    margin-left: 20px;/*Se apliacra un margen de a la izquerda de 20px*/
+    letter-spacing: 1px;/*Se utiliza paraponer espacio entre los caracteres de un texto*/
+    cursor: pointer;/*cuando e cursor se para sobre el elemento este cambia su forma segun se desee*/
+    overflow:hidden;/*Se utiliza para mostrar solo el contenido qie cabe en la caja lo que no cabe no se muestra*/
+    transition: all 300ms; /*Se utliza para crear una animacion de 300ms*/
 
-
-}
-
-#logo .gear{
-    display: block;
-    float: left;
-    font-size: 30px;
-    margin-top: 8px;
-    margin-left: 26px;
 
 }
 
-#logo h3{
-    display: block;
-    float: right;    
-    font-size: 40px;
-    margin-top: 5px;
-    margin-right: 65px;
-    transition: all 300ms;
+#logo .gear{/*Indica que se aplicara estilos a id del logo pero onla clase gear*/
+    display: block;/*Se utiliza para indicar que el elemnto se tratara como un blooque y se utilizara todo su ancho y altto*/
+    float: left;/*El lemnto se flotara al costado izquierdo*/
+    font-size: 30px;/*Permote indicar el tamañode la letra que se utilizara */
+    margin-top: 8px;/*Se aplicara una margen superior de 8px*/
+    margin-left: 26px;/*Se aplixara una margen  al costado izquierdo de 26px*/
+
 }
 
-#menu{
-    float: right;
-    height: 70px;
-    background: transparent;
+#logo h3{/*Se aplicara estilos al id del logo con la etiqueta h3*/
+    display: block;/*el elemneto sera tratado como un bloque se utilizara todo su acho y todo su alto*/
+    float: right; /*El elemento se flotara al costado izquierdo*/
+    font-size: 40px;/*Tendra un tamañp la letra de 40px*/
+    margin-top: 5px;/*El margne superior sera de 5px */
+    margin-right: 65px;/*El margen al csotado derfecho sera de 65px*/
+    transition: all 300ms;/*Se arelisara un animacion de 300ms */
+}
+/*MENU*/
+#menu{/*Se aplicaran estilos a los id del elemnto menu*/
+    float: right;/*Se flotara elelemnto al costado izquerdo*/
+    height: 70px;/*Tendra un alto de 70px*/
+    background: transparent;/*Se aplicara un fondo */
   
 }
 
-#menu ul li {
-    font-size: 21px;
-    display: inline-block;
-    margin: 0px 20px 0px 20px;
-    letter-spacing: 1px;
-    line-height: 70px;
+#menu ul li { /*Se aplicara estilos al id de las etiquetas ul y li*/
+    font-size: 21px;/*Se aplixara un tamaño a la letra de 21px*/
+    display: inline-block;/*Se utiliza para poner el elemento en linea como se ve en el menu */
+    margin: 0px 20px 0px 20px;/*Se aplicara margen en los cuatro castados como las medidas en px como lo indica la istruccion */
+    letter-spacing: 1px;/*Se utiliza para poner estacio entre los caracteres de un texto*/
+    line-height: 70px;/*Se utiliza para poner el alto entrelines indicando la sparacion del texto */
 }
 
-#menu ul li a{
-    display: block;
-   color:white;
-   text-decoration: none;
-   transition: all 200ms;
+#menu ul li a{/*Se aplicaran estlos a id menu de los elementos ul , li , a */
+   display: block;/*Se utilizara tood el ancho y alto del elemento, se maejara como un bloque */
+   color:white;/*Se utiliza para indicar el color del elemento*/
+   text-decoration: none;/*Se utiliza para quitar losestilos como el subrayado */
+   transition: all 200ms;/*Se aplicara un efecto de 200ms */
 }
 
-#menu ul li a:hover{
-    color: #37bcf9;
-    transform: scale(1.2, 1.2);
+#menu ul li a:hover{/*Se utiliza el pseudo class hover para indicar que se aplicara efectos al id menu con los ementos ul, il al pasar soobrre ellos*/ 
+    color: #37bcf9;/*Se alicara este color al pasar sobre ellos*/
+    transform: scale(1.2, 1.2);/*se utliza para crear efectos en 2D */
 }
 
+/*BANNER*/
+#banner{ /*Se utiliza el id del banner para indicar que se plantaran estilos */
+    width: 95%; /*Se utilizara un 95% del ancho del elemento*/
+    height: 100px; /*tendra una altura de 100px*/
+    border: 10px solid white; /*Se definen los bordes de 10px solidos y de tono blanco*/
+    box-shadow: 0px 0px 2px gray; /*Se pone un efecto de sombras en el elemento*/
+    background: url("../img/bakbaner.png"); /*Se utiliza para llamara la imagen de fondo que se utilizara para este diseño*/
+    background-position: -430px -136px; /*permite que se pueda ajustar los valores en x y y para posicionar los estilos del banner*/
+    margin: 20px auto; /*permite tomar la margen respecto a los limites d ela pagina */
+}
+
+#banner h1{ /*Se utiliza para indicar que se aplicaran estilos al id del banner en la etiqueta h1*/
+   display: block;/*Se utiliza para indicar que se manejara el elemnto como un bloque, se utilizara todo el ancho y alto disponible*/
+   width: 850px;/*El ancho para este elemnto sera de 850px*/
+   font-family: "BabasNeue";/*El estilo de letra sera la seleccionada*/
+   color: white;/*El color de la letra sera el seleccionado*/
+   font-size: 45px; /*Tendra un tamaño de 45px la letra */
+   font-weight: normal;/*Se utiliza para definir el peso de la letra, sea negrita o normal*/
+   letter-spacing: 2px;/*Este es el espacio que se da entre un caracter al otro*/
+   text-shadow: 2px 2px 1px black; /*Se utiliza para poner estilos de  sombra al texto*/
+   margin: 27px auto; /*El elemnto tendra un margen de 27px */
+
+}
 
 
 
