--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ body{/*Se utiliza paea indicar que se aplixarane estilos directa,mee al body de 
     box-shadow: 1px 1px 2px #ddd;/*Se utiliza para definir el sombreado que tendra el elemento*/
     background: white;/*Se define el color de fondo*/
     overflow:hidden;/*Se utiliza para que no permiete que se salgan los elementos del bloque y se vea desordenado*/
-    margin: 16px; /*Se aplicara una ,argen de 16px en los cuatro costados del elemento*/
+    margin: 21px; /*Se aplicara una ,argen de 16px en los cuatro costados del elemento*/
     margin-top: 40px;/*Se utilizara una margen superior de 40px */
     cursor:pointer;/*Se aplica para cuando el cursor se ponga sobre el elemnto este cambie de puntero aa selector*/
 
@@ -170,12 +170,132 @@ body{/*Se utiliza paea indicar que se aplixarane estilos directa,mee al body de 
     color: #00538c;/*este es el color que se apliocara al elemento*/
 }
 
-.card .description{/*Se degine que se aplicara estilos a las calses card y description*/
+.card .description{/*Se indica que se aplicara estilos a las calses card y description*/
     font-family: "TrebuchetMS";/*Se indica el tipo de ltetra que aplicara*/
     text-align: center;/*Se centrara el texto*/
     color: hsl(204, 83%, 45%);/*aplicamos un color al elemnto*/
     font-size: 15px;/*el tamaño de la letra sera de 15px*/
 }
+
+/* BARRA LATERAL */
+#lateral{/*Se aplicaran estilos a la id del elemento lateral*/
+    width: 300px;/*Se utilizara in ancho de 300px*/  
+    min-height: 1200px;/*Se aplicara unminino de lines en la altura de 1200px*/
+    font-family: "TrebuchetMS";/*El estilo de la letra*/
+    float: right;/*Se flotara el elemnto a la derecha*/
+    margin: 20px;
+}
+aside h3{ /*Indica ques e aplicaran estilos al elmento aide con espesificaciones en el h3*/
+    display: block;/*Se manejara el elemento como un vloque para trabajar en todo el ancho y largo */
+    width: auto;/*definimos un ancho automatico*/
+    height: 45px;/*indicamos que se trabajra un alto del 45px en el elemnto*/
+    line-height: 46px;/*Se utiliza para indicar la altura entre las cajas de bloque*/
+    background: url('../img/pxgray.png'), white;/*se utilizara indicar el fondo del elemnto en ste caso una imagen con ruta en la url*/
+    box-shadow: 0px 1px 0px #393d3f, 1px 2px 0px #393d3f, 2px 3px 0px #393d3f, 3px 4px 0px #393d3f;/*Se crea efecto de sombra*/
+    font-size: 30px;/*Se define el tamaño de la letra ques e deseas*/
+    font-family: "Babasneue";/*Se indica el estilo de eltra que se desea*/
+    font-weight: normal;/*indicamos el grosor de ña funte de la letra en normalque es mas o menos 700*/
+    letter-spacing: 2px;/*Se utiliza para indicar el espacio enter caracteres*/
+    padding-left: 15px;/*indicamos que se se desea un espacio interno al costado izquierdo*/
+    margin-top: 30px;/*Se define el espacio donde se ajustara la margen superir*/
+    margin-bottom: 15px;/*Se define donde se ajustar la margen  inferior del elemento*/
+}   
+
+#lateral h3:first-child{/*Se utiliza el id con seleccion del elemnto h3, pero adicional pseudo-clase first-child que tomara unicamnete elprimer h3 de la lista delos id lateral*/
+    margin-top: 0px; /*Se alicara a este elemento una margen superior de 0px*/
+}
+
+#search{/*Indicamos que se realizaran estilos a los id de search*/
+    width:90% ;/*Utilizaremos un ancho de 90% en en el elemento*/
+    height: 30px; /*Un alto de 30px*/
+    margin: 10px auto;/*Indica que el elem,nto tiene ua margen de 10px en sus costado superior e inferior y autimatico en la derecha e izquerda */
+    background-color: white;/*El color del fond que se aplicara*/
+    border: 1px solid #ccc;/*indica que el elemnto tendra un borde de 1px solido y de ese color*/
+    border-radius: 5px;/*Indica que las esquinas tendran  bordes redondos de 5px*/
+    box-shadow: 1px 1px 4px #ccc inset; /*Se utiliza para poner efecto de sombra al elemento y el inset indica que elefecto se refleja para dentro del elemento */
+
+}
+
+#lateral input[type="text"]{/*indica que se pondran estilos en el id lateral de los input y espesifica que es en type='text'*/
+    width: 85%; /*Ocupara un ancho del 85% de todo el elemento*/
+    height: 30px;/*teandra una altura */
+    border:none;/*Se utiliza com un reset de los bordes para eliminar algunos efecto que se pueden dar por el navegador */
+    padding-left: 5px;/*Se aplicara un espacio interno al costado ziquierdo de 5px*/
+    border-radius: 5px;/*Tendra las cuatro izquinas de los boprdes redondas*/
+    background-color: transparent;/*El color de fondo para este elemento sera trasnpaerente*/
+    color:#ccc;/*El color de lo escrito o contenido */
+}
+
+#lateral input[type="text"]:focus{/*indica que se aplicara estilos a los type texto de los input del id lateral, focus lo reflejara al clokear el input */
+    color:#555;/*Se selecciona le color que tendra*/
+    transition: all 500ms; /*se realizara un transicion sube del elemento, para crea un efecto vidual amigable*/
+}
+
+#lateral input[type="button"],
+#lateral input[type="submit"]{/*indica que se aplicara estilos al id lateral con los hijs input type button y submit*/
+
+    height: 30px; /*Permiete seleccionar el alto del elemento*/
+    cursor: wait;/*Se utiliza para poner diseño al cursos para cuando este pase sobre el elemento*/
+    font-size: 16px;/*Se utiliza para indicar el tamaño de la letra que se desea*/
+    background-color:transparent;/*Se indica el color de fondo que se desea para el elemento*/
+    border:none;/*Se utiliza para resetear los bordes que se pueden ver afectados por el navegador */
+    border-left: 1px solid #ccc;/*indica que se pondra un borde solido de 1px el costado izquierdo del elemento y tendra un color */
+    color: #555;/*Se aplicara esta tonalidad al elemento*/
+    padding-left: 6px;/* Indica que el elemnto tedra un espacio interno de 6px al costado izquierdo*/
+                           
+}
+
+.aside-box{/*Se indica que se aplicara estilos a la clase */
+    width: 85%;/*El elemntoto cupara un ancho de 85%*/
+    height: 240px;/*Tendra un alto de 240px  */
+    margin:  0px auto;/*Se aplicara un margin con esos valores en los cuatro costados*/
+    margin-top: 20px;/*Se define un espacio donde se apliacra la margen superior*/
+    padding-top: 2px;/*El espacio ineterno superir*/
+    background: white;/*El color de fondo sera de  wwhite*/
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.3), 0px 1px white inset, 0px -3px 2px rgba(0, 0, 0, 0.3) inset;/*Se aplican efectos con  diferentes valores para que la caja tome el efecto en 3D*/
+}
+
+#login input[type="email"],
+#login input[type="password"]{/*Indicamos que vamos aplicar estilos a los id de type email y password seleccionados*/
+    display: block;/*Se utiliza para indicar que el elemto se tratar como un bloque y se utilizara todo su acho y alto */
+    margin: 0px auto;/*Indica que el margen superio es de 0px y el de los lateres se genera automatico*/
+    margin-top: 20px;/*Indica que el margen superior tien u espacio de de 20px*/
+    width: 82%;/*El ancho del elemnto es el ajusrado en porcentaje*/
+    height: 30px;/*El alto dele lemnto sera de 30px*/
+    border: 1px solid #ccc;/*Indica que el borde tendra un gris calro en todo su contenido*/
+    box-shadow: 1px 1px 1px #ccc inset;/*Indica que elemento tendra un sombreado y la funcion isent que sera incrustrado*/
+    border-radius: 5px;/*Indica que tendra un las esquinas redondas en 5px*/
+    padding-left: 30px;/*Tendra un espacio interno de 30px al costadio izquierdo*/
+    color: gray;/*Color del elemto sera gris*/
+}
+
+
+#login input[type="email"]:focus,/*Se aplicara estilos al id seleccionado con efecto focus*/
+#login input[type="password"]:focus{
+    color: #555;/*Se indica el color que tendra el efecto*/
+    box-shadow: 1px 1px 1px gray inset;/*Se aplicara un sombreado al elemento como efecto*/
+}
+
+
+#login #user,
+#login #password{/* Se utiliza para indicar que se aplicaran estilos al id user y password */
+    display: block;/*Se utiliza para indicar que el elemento se trabajara como un block se utilizara todo el ancho y alto */
+    text-align: center;/*indica que el elemento centrara el texto */
+    position: absolute;/*Se utiliza para posicionar el elemnto dentro de otro si desplazarklo queda sobre el */
+    margin-left: 15px;/*Se indica que la marge izquerda sera de 15px */
+    margin-top: 6px;/*La margen superior tendra un espacio 6px*/
+    height: 30px;/*Tendra un alto de 30px*/
+}
+
+#login #password{/*Se utiliza para indicar que se aplicaran estilos a los id login y password*/
+    margin-left: 18px;/*Se utilizara una margen a la izquerda de 18px*/
+    margin-top: 25px;/*indica que la margen superior tendra un espacio de 25px*/
+    font-size: 20px;/*Indica que la letra tendra un tamaño de 20px*/
+
+}
+
+
+
 
 
 
