--- a/css/styles.css
+++ b/css/styles.css
@@ -311,6 +311,7 @@ aside h3{ /*Indica ques e aplicaran estilos al elmento aide con espesificaciones
     font-family: "TrebechetMS";
     font-weight: lighter;
     margin-left: 17px;
+    margin-bottom: 20px;
     transition: all 300ms;
 
 }
@@ -321,6 +322,20 @@ aside h3{ /*Indica ques e aplicaran estilos al elmento aide con espesificaciones
 #login button:hover{
     box-shadow: 0px 0px 3px gray;
 
+}
+
+#login a{
+    display: block;
+    font-size: 14px;
+    text-decoration: none;
+    margin-left: 18px;
+    color: #555;
+
+}
+
+#login a:hover{
+    text-decoration: underline;
+    color: #2f78bc;
 }
 
 
